// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback simslead and engineering dashboard tests should render feedback dashboard  when simslead is logged in without crashing 1`] = `
<Fragment>
  <div
    className="page-content feedbackDashboard container-fluid"
  >
    <div
      className="row m-0"
    >
      <div
        className="col-xl-9 p-0"
      >
        <Title
          subTitle="Filter by clicking cards"
          title="FEEDBACK"
        />
        <MapFeedbackFilterCard
          feedbackArray={
            Array [
              Object {
                "context": "Your quality is below expectation, you are off-track",
                "criteria": "lms",
                "end_date": "2019-04-05",
                "level": "D0B Apprenticeship",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Oluseyi Anani",
                "project": "Watch Tower",
                "start_date": "2019-03-05",
                "type": "pre-pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-06",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-06-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-08",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "lms",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-10",
                "type": "pip",
              },
            ]
          }
          filterKey="manager_email"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All LFs",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="All Feedback"
          useFilterData={false}
        />
        <MapFeedbackFilterCard
          feedbackArray={
            Array [
              Object {
                "context": "Your quality is below expectation, you are off-track",
                "criteria": "lms",
                "end_date": "2019-04-05",
                "level": "D0B Apprenticeship",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Oluseyi Anani",
                "project": "Watch Tower",
                "start_date": "2019-03-05",
                "type": "pre-pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-06",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-06-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-08",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "lms",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-10",
                "type": "pip",
              },
            ]
          }
          filterKey="type"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All LFs",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="Pre-PIP & PIP"
          useFilterData={true}
        />
        <MapFeedbackFilterCard
          feedbackArray={
            Array [
              Object {
                "context": "Your quality is below expectation, you are off-track",
                "criteria": "lms",
                "end_date": "2019-04-05",
                "level": "D0B Apprenticeship",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Oluseyi Anani",
                "project": "Watch Tower",
                "start_date": "2019-03-05",
                "type": "pre-pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-06",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-06-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-08",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "lms",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-10",
                "type": "pip",
              },
            ]
          }
          filterKey="criteria"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All LFs",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="All Criteria"
          useFilterData={true}
        />
      </div>
      <div
        className="col-xl-3"
      >
        <Title
          subTitle="Choose when you want to see feedback"
          title="Duration"
        />
        <div
          className="ops-dashboard__fellows-summary"
        >
          <FeedbackDuration
            clearDuration={[Function]}
            currentDate="2019-3-15"
            endDate="2019-08-05 14:34:03"
            handleEndDateChange={[Function]}
            handleStartDateChange={[Function]}
            startDate="2019-03-05"
          />
        </div>
      </div>
    </div>
    <div
      className="row m-0"
    >
      <div
        className="col-xl-12 px-0"
      >
        <FellowsCount
          clearFilters={[Function]}
          count={4}
          countName="Feedback"
        />
      </div>
    </div>
    <div
      className="row m-0"
    >
      <FeedbackDashboardTable
        currentRole="WATCH_TOWER_EM"
        feedbackArray={Array []}
        handleClick={[Function]}
        type=""
      />
      <div
        className="col-12 mb-4 mt-5"
      />
    </div>
  </div>
</Fragment>
`;

exports[`Feedback simslead and engineering dashboard tests should render feedback dashboard  when simslead is logged in without crashing 2`] = `
<Fragment>
  <div
    className="page-content feedbackDashboard container-fluid"
  >
    <div
      className="row m-0"
    >
      <div
        className="col-xl-9 p-0"
      >
        <Title
          subTitle="Filter by clicking cards"
          title="FEEDBACK"
        />
        <MapFeedbackFilterCard
          feedbackArray={
            Array [
              Object {
                "context": "Your quality is below expectation, you are off-track",
                "criteria": "lms",
                "end_date": "2019-04-05",
                "level": "D0B Apprenticeship",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Oluseyi Anani",
                "project": "Watch Tower",
                "start_date": "2019-03-05",
                "type": "pre-pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-06",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-06-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-08",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "lms",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-10",
                "type": "pip",
              },
            ]
          }
          filterKey="manager_email"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All LFs",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="All LFs"
          useFilterData={false}
        />
        <MapFeedbackFilterCard
          feedbackArray={
            Array [
              Object {
                "context": "Your quality is below expectation, you are off-track",
                "criteria": "lms",
                "end_date": "2019-04-05",
                "level": "D0B Apprenticeship",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Oluseyi Anani",
                "project": "Watch Tower",
                "start_date": "2019-03-05",
                "type": "pre-pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-06",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-06-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-08",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "lms",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-10",
                "type": "pip",
              },
            ]
          }
          filterKey="type"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All LFs",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="Pre-PIP & PIP"
          useFilterData={true}
        />
        <MapFeedbackFilterCard
          feedbackArray={
            Array [
              Object {
                "context": "Your quality is below expectation, you are off-track",
                "criteria": "lms",
                "end_date": "2019-04-05",
                "level": "D0B Apprenticeship",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Oluseyi Anani",
                "project": "Watch Tower",
                "start_date": "2019-03-05",
                "type": "pre-pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-06",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "pulse",
                "end_date": "2019-06-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-08",
                "type": "pip",
              },
              Object {
                "context": "Your quality is below expectation",
                "criteria": "lms",
                "end_date": "2019-05-18",
                "level": "D0A Simulations",
                "manager": "{\\"staff_id\\":\\"-LU5ayJwwvcPATT1akh5\\",\\"name\\":\\"Trust birungi\\",\\"email\\":\\"olaolu.akinsete@andela.com\\",\\"role\\":\\"TTL\\",\\"manager_id\\":\\"-KXGy1MT1oimjQgFim8t\\"}",
                "manager_email": "trust.birungi@andela.com",
                "name": "Brian Mboya",
                "project": "Noldor",
                "start_date": "2019-03-10",
                "type": "pip",
              },
            ]
          }
          filterKey="criteria"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All LFs",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="All Criteria"
          useFilterData={true}
        />
      </div>
      <div
        className="col-xl-3"
      >
        <Title
          subTitle="Choose when you want to see feedback"
          title="Duration"
        />
        <div
          className="ops-dashboard__fellows-summary"
        >
          <FeedbackDuration
            clearDuration={[Function]}
            currentDate="2019-3-15"
            endDate="2019-08-05 14:34:03"
            handleEndDateChange={[Function]}
            handleStartDateChange={[Function]}
            startDate="2019-03-05"
          />
        </div>
      </div>
    </div>
    <div
      className="row m-0"
    >
      <div
        className="col-xl-12 px-0"
      >
        <FellowsCount
          clearFilters={[Function]}
          count={4}
          countName="Feedback"
        />
      </div>
    </div>
    <div
      className="row m-0"
    >
      <FeedbackDashboardTable
        currentRole="WATCH_TOWER_SL"
        feedbackArray={Array []}
        handleClick={[Function]}
        type=""
      />
      <div
        className="col-12 mb-4 mt-5"
      />
    </div>
  </div>
</Fragment>
`;

exports[`Test Feedback Dashboard should render feedback dashboard without crashing 1`] = `
<Fragment>
  <div
    className="page-content feedbackDashboard container-fluid"
  >
    <div
      className="row m-0"
    >
      <div
        className="col-xl-9 p-0"
      >
        <Title
          subTitle="Filter by clicking cards"
          title="FEEDBACK"
        />
        <p
          className="text-center alert-danger"
        >
          No Fellow Feedback at the moment
        </p>
        <MapFeedbackFilterCard
          feedbackArray={Array []}
          filterKey="type"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All Feedback",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="Pre-PIP & PIP"
          useFilterData={true}
        />
        <MapFeedbackFilterCard
          feedbackArray={Array []}
          filterKey="criteria"
          filteredFeedbackArray={Array []}
          handleCardClick={[Function]}
          isTicked={
            Object {
              "criteria": "All Criteria",
              "level": "All Levels",
              "manager_email": "All Feedback",
              "project": "All Projects",
              "type": "Pre-PIP & PIP",
            }
          }
          loading={false}
          title="All Criteria"
          useFilterData={true}
        />
      </div>
      <div
        className="col-xl-3"
      >
        <Title
          subTitle="Choose when you want to see feedback"
          title="Duration"
        />
        <div
          className="ops-dashboard__fellows-summary"
        >
          <FeedbackDuration
            clearDuration={[Function]}
            currentDate="2019-3-15"
            endDate="2019-3-15"
            handleEndDateChange={[Function]}
            handleStartDateChange={[Function]}
            startDate="2019-03-10"
          />
        </div>
      </div>
    </div>
    <div
      className="row m-0"
    >
      <div
        className="col-xl-12 px-0"
      >
        <FellowsCount
          clearFilters={[Function]}
          count={0}
          countName="Feedback"
        />
      </div>
    </div>
    <div
      className="row m-0"
    >
      <FeedbackDashboardTable
        currentRole="WATCH_TOWER_LF"
        feedbackArray={Array []}
        handleClick={[Function]}
        type=""
      />
      <div
        className="col-12 mb-4 mt-5"
      />
    </div>
  </div>
</Fragment>
`;

exports[`Test Feedback Dashboard should render the feedback pagination wrapped component 1`] = `
<PaginationFrontendWrapper
  component={
    <FeedbackDashboard
      component={
        <FeedbackDashboard
          currentRole="WATCH_TOWER_OPS"
          fellowFeedback={[MockFunction]}
          getManagerFeedback={[MockFunction]}
          history={
            Object {
              "push": [MockFunction],
            }
          }
          loading={false}
          role="WATCH_TOWER_OPS"
          user={
            Object {
              "email": "wt-test-ops@andela.com",
              "roles": Object {
                "WATCH_TOWER_OPS": "-l1ujhfhjbshwjrn",
              },
            }
          }
        />
      }
      loading={false}
    />
  }
/>
`;
